@@ -73,7 +73,7 @@
 <!ENTITY lfs-vim-version              "7.4">
 <!-- End LFS versions -->
 
-<!ENTITY blfs-bootscripts-version     "20160902">
+<!ENTITY blfs-bootscripts-version     "20170127">
 <!ENTITY systemd-units-version        "20160602">
 
 
