@@ -43,6 +43,23 @@
     </listitem>
 -->
     <listitem>
+      <para>January 27th, 2017</para>
+      <itemizedlist>
+        <listitem>
+          <para>[bdubbs] - Fix typo in nfs-server bootscript.</para>
+        </listitem>
+        <listitem>
+          <para>[bdubbs] - Update to gnupg-2.1.18. Fixes
+          <ulink url="&blfs-ticket-root;8793">#8793</ulink>.</para>
+        </listitem>
+        <listitem>
+          <para>[bdubbs] - Update to feh-2.18.1. Fixes
+          <ulink url="&blfs-ticket-root;8791">#8791</ulink>.</para>
+        </listitem>
+      </itemizedlist>
+    </listitem>
+
+    <listitem>
       <para>January 26th, 2017</para>
       <itemizedlist>
         <listitem>
