@@ -12,7 +12,7 @@
 <!ENTITY consolekit-version           "1.0.2">
 <!ENTITY cracklib-version             "2.9.6">
 <!ENTITY cyrus-sasl-version           "2.1.26">
-<!ENTITY gnupg2-version               "2.1.17">
+<!ENTITY gnupg2-version               "2.1.18">
 <!ENTITY gnutls-version               "3.5.8">
 <!ENTITY gpgme-version                "1.8.0">
 <!ENTITY haveged-version              "1.9.1">
@@ -699,7 +699,7 @@
 <!-- Chapter 44 -->
 <!ENTITY balsa-version                "2.5.3">
 <!ENTITY ekiga-version                "4.0.1">
-<!ENTITY feh-version                  "2.18">
+<!ENTITY feh-version                  "2.18.1">
 <!--<!ENTITY fontforge-date               "2015-02-28">-->
 <!ENTITY fontforge-version            "20161004">
 <!ENTITY gparted-version              "0.27.0">
